--- a/index.html
+++ b/index.html
@@ -210,12 +210,84 @@
 						"title": "Tokt 1",
 						"url": "test",
 						"class": "event-important",
+						"start": 1485990000000, // Milliseconds
+						"end": 1486162800000 // Milliseconds
+					},
+					{
+						"id": 294,
+						"title": "Tokt 2",
+						"url": "test",
+						"class": "event-important",
+						"start": 1486335600000, // Milliseconds
+						"end": 1486422000000 // Milliseconds
+					},
+					{
+						"id": 295,
+						"title": "Tokt 3",
+						"url": "test",
+						"class": "event-important",
+						"start": 1486508400000, // Milliseconds
+						"end": 1486767600000 // Milliseconds
+					},
+					{
+						"id": 296,
+						"title": "Tokt 4",
+						"url": "test",
+						"class": "event-important",
+						"start": 1487631600000, // Milliseconds
+						"end": 1487718000000 // Milliseconds
+					},
+					{
+						"id": 297,
+						"title": "Tokt 5",
+						"url": "test",
+						"class": "event-important",
+						"start": 1487199600000, // Milliseconds
+						"end": 1487286000000 // Milliseconds
+					},
+					{
+						"id": 298,
+						"title": "Tokt 6",
+						"url": "test",
+						"class": "event-important",
+						"start": 1488150000000, // Milliseconds
+						"end": 1488322800000 // Milliseconds
+					},
+					{
+						"id": 299,
+						"title": "Tokt 7",
+						"url": "test",
+						"class": "event-important",
+						"start": 1489014000000, // Milliseconds
+						"end": 1489100400000 // Milliseconds
+					},
+					{
+						"id": 300,
+						"title": "Tokt 8",
+						"url": "test",
+						"class": "event-important",
+						"start": 1489100400000, // Milliseconds
+						"end": 1489186800000 // Milliseconds
+					}/*,
+					{
+						"id": 301,
+						"title": "Tokt 2",
+						"url": "test",
+						"class": "event-important",
+						"start": 1487199600000, // Milliseconds
+						"end": 1487286000000 // Milliseconds
+					},
+					{
+						"id": 700,
+						"title": "Testtokt",
+						"url": "test",
+						"class": "event-important",
 						"start": 1485995632800, // Milliseconds
 						"end": 1489995632700 // Milliseconds
-					}],
+					}*/],
 					modal: "#events-modal",
 					modal_type: "ajax",
-					modal_title : function (e) { return e.title },
+					modal_title : function (event) { return event.title },
 					view: "year",
 					first_day: "1",
 					onAfterViewLoad: function(view) {
