--- a/user.html
+++ b/user.html
@@ -173,6 +173,7 @@
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
 						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Export as PDF</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
@@ -197,6 +198,7 @@
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
 						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Export as PDF</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
@@ -221,6 +223,7 @@
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
 						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Export as PDF</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
@@ -245,6 +248,7 @@
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Start time: 23.02.2017 0800 GMT+1</li>
 						  <li class="list-group-item"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> End time: 24.02.2017 1600 GMT+1</li>
 						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Add to your calendar</button>
+						  <button type="button" class="list-group-item list-group-item-info calendar-export-button">Export as PDF</button>
 						</ul>
 					</div>
 					<div class="col-sm-7">
